--- a/05_Wykresy/Materiały_na_zjazd/02_Wykresy/02_Generowanie wykresów 2D/1_Rysunek gwiazdy.ipynb
+++ b/05_Wykresy/Materiały_na_zjazd/02_Wykresy/02_Generowanie wykresów 2D/1_Rysunek gwiazdy.ipynb
@@ -14,40 +14,45 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T21:28:43.532219Z",
-     "start_time": "2024-11-13T21:28:43.528186Z"
+     "end_time": "2024-11-13T21:53:34.796277Z",
+     "start_time": "2024-11-13T21:53:34.791074Z"
     }
    },
    "cell_type": "code",
    "source": "import matplotlib.pyplot as plt",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T21:28:43.550378Z",
-     "start_time": "2024-11-13T21:28:43.545864Z"
+     "end_time": "2024-11-13T21:53:34.805816Z",
+     "start_time": "2024-11-13T21:53:34.801370Z"
     }
    },
    "cell_type": "code",
    "source": "import matplotlib",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 37
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-13T21:53:34.820869Z",
+     "start_time": "2024-11-13T21:53:34.815861Z"
+    }
+   },
    "cell_type": "code",
    "source": "# matplotlib.__version__",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 38
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T21:28:43.601315Z",
-     "start_time": "2024-11-13T21:28:43.597414Z"
+     "end_time": "2024-11-13T21:53:34.835472Z",
+     "start_time": "2024-11-13T21:53:34.828742Z"
     }
    },
    "source": [
@@ -66,18 +71,18 @@
     "]"
    ],
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 39
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T21:28:43.739951Z",
-     "start_time": "2024-11-13T21:28:43.613282Z"
+     "end_time": "2024-11-13T21:53:34.946001Z",
+     "start_time": "2024-11-13T21:53:34.844211Z"
     }
    },
    "source": [
-    "plt, ax = plt.subplots(figsize=(8, 8))\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
     "\n",
     "x_coords = [point[0] for point in dataset]\n",
     "y_coords = [point[1] for point in dataset]\n",
@@ -85,19 +90,9 @@
     "ax.plot(x_coords, y_coords)\n",
     "ax.fill(x_coords, y_coords, 'b', alpha=0.3)    # wypełnienie: koordynaty co ma być wypełnione, kolor css, alpha to przeźroczystość\n",
     "\n",
-    "# plt.show()"
+    "plt.show()"
    ],
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<matplotlib.patches.Polygon at 0x1c47cf35760>]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "data": {
       "text/plain": [
@@ -109,7 +104,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 29
+   "execution_count": 40
   }
  ],
  "metadata": {
