--- a/05_Wykresy/Materiały_na_zjazd/02_Wykresy/03_Zaawansowane wykresy/1_Migracja.ipynb
+++ b/05_Wykresy/Materiały_na_zjazd/02_Wykresy/03_Zaawansowane wykresy/1_Migracja.ipynb
@@ -216,7 +216,7 @@
     "\n",
     "ax.bar(x=df[\"Rok\"], height=df[\"Migracje zagraniczne na pobyt stały – Saldo\"])\n",
     "\n",
-    "plt.xticks(df[\"Rok\"], rotation=45)    # przechylenie nazw miesięcy na osi x o 45 stopni\n",
+    "plt.xticks(df[\"Rok\"], rotation=45)    # przechylenie nazw na osi x o 45 stopni\n",
     "\n",
     "plt.tight_layout()    # po wygenerowaniu wykresu sprawdza czy elementy nie zachodzą na siebie\n",
     "plt.show()    # zamyka canvas"
@@ -234,18 +234,6 @@
     }
    ],
    "execution_count": 32
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-14T16:45:22.666749Z",
-     "start_time": "2024-11-14T16:45:22.663057Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "outputs": [],
-   "execution_count": null
   }
  ],
  "metadata": {
