--- a/05_Wykresy/Materiały_na_zjazd/02_Wykresy/03_Zaawansowane wykresy/3_Wrocławski budżet partycypacyjny.ipynb
+++ b/05_Wykresy/Materiały_na_zjazd/02_Wykresy/03_Zaawansowane wykresy/3_Wrocławski budżet partycypacyjny.ipynb
@@ -392,6 +392,130 @@
    "execution_count": 7
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### z powyższego wynika, że są missingi: kod pocztowy ma 2 braki, więc robimy df.describe",
+   "id": "4bad66ab59e7a2fa"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-17T22:21:36.957682Z",
+     "start_time": "2024-11-17T22:21:36.931927Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.describe()",
+   "id": "36b669a173e41807",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                 Lp          Wiek     Osiedlowy  Ponadosiedlowy\n",
+       "count  83011.000000  83011.000000  83011.000000    83011.000000\n",
+       "mean   41506.000000     34.631025    203.413403      169.867548\n",
+       "std    23963.355935     18.247531    135.225674      134.173157\n",
+       "min        1.000000      0.000000      0.000000        0.000000\n",
+       "25%    20753.500000     25.000000     88.000000       18.000000\n",
+       "50%    41506.000000     34.000000    215.000000      151.000000\n",
+       "75%    62258.500000     43.000000    309.000000      275.000000\n",
+       "max    83011.000000    175.000000    447.000000      438.000000"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lp</th>\n",
+       "      <th>Wiek</th>\n",
+       "      <th>Osiedlowy</th>\n",
+       "      <th>Ponadosiedlowy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>83011.000000</td>\n",
+       "      <td>83011.000000</td>\n",
+       "      <td>83011.000000</td>\n",
+       "      <td>83011.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>41506.000000</td>\n",
+       "      <td>34.631025</td>\n",
+       "      <td>203.413403</td>\n",
+       "      <td>169.867548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>23963.355935</td>\n",
+       "      <td>18.247531</td>\n",
+       "      <td>135.225674</td>\n",
+       "      <td>134.173157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>20753.500000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>41506.000000</td>\n",
+       "      <td>34.000000</td>\n",
+       "      <td>215.000000</td>\n",
+       "      <td>151.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>62258.500000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>309.000000</td>\n",
+       "      <td>275.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>83011.000000</td>\n",
+       "      <td>175.000000</td>\n",
+       "      <td>447.000000</td>\n",
+       "      <td>438.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-17T22:15:57.137506Z",
