--- a/05_Wykresy/Materiały_na_zjazd/02_Wykresy/03_Zaawansowane wykresy/3_Wrocławski budżet partycypacyjny.ipynb
+++ b/05_Wykresy/Materiały_na_zjazd/02_Wykresy/03_Zaawansowane wykresy/3_Wrocławski budżet partycypacyjny.ipynb
@@ -800,16 +800,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-17T22:53:31.685237Z",
-     "start_time": "2024-11-17T22:53:31.536565Z"
+     "end_time": "2024-11-17T22:57:12.935790Z",
+     "start_time": "2024-11-17T22:57:12.719172Z"
     }
    },
    "cell_type": "code",
    "source": [
     "fig, ax = plt.subplots(figsize=(12, 8))\n",
     "\n",
+    "# wzór ile ma być \"koszyków\" w zbiorze czyli tych przedziałów na osi\n",
+    "bins = range(18, 100, 5)\n",
+    "\n",
+    "\n",
     "ax.hist(df[\"Wiek\"], bins=16)\n",
-    "    # wzór ile ma być \"koszyków\" w zbiorze czyli tych przedziałów na osi\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -834,7 +838,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 56
+   "execution_count": 57
   },
   {
    "metadata": {},
