Ruch naturalny i wędrówkowy

--- a/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
+++ b/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
@@ -443,8 +443,8 @@
    "cell_type": "code",
    "source": [
     "    # dwa wykresy na jednym schemacie czyli jeden wiersz, dwie kolumny (nrows i ncols:, muszą to być parametry pozycyjne)\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(12, 8))\n",
+    "    # axs a nie ax bo tutaj to już jest liczba mnoga\n",
+    "fig, axs = plt.subplots(1, 2, figsize=(12, 8))\n",
     "\n",
     "\n",
     "plt.show()"
