--- a/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
+++ b/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
@@ -443,7 +443,7 @@
    "cell_type": "code",
    "source": [
     "    # dwa wykresy na jednym schemacie czyli jeden wiersz, dwie kolumny (nrows i ncols:, muszą to być parametry pozycyjne)\n",
-    "    # axs a nie ax bo tutaj to już jest liczba mnoga\n",
+    "    # axs a nie ax bo tutaj to już jest liczba mnoga (axs to jeden prostokąt)\n",
     "fig, axs = plt.subplots(1, 2, figsize=(12, 8))\n",
     "\n",
     "\n",
