Ruch naturalny i wędrówkowy

--- a/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
+++ b/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
@@ -478,12 +478,31 @@
     "fig, axs = plt.subplots(1, 2, figsize=(12, 8))\n",
     "\n",
     "# axs[0] - index pierwszego wykresu\n",
-    "axs[0].plot(df[\"Rok\"], df[\"Ruch naturalny – Urodzenia\"], color=\"blue\", label=\"Ruch naturalny – Urodzenia\")\n",
-    "axs[0].plot(df[\"Rok\"], df[\"Ruch naturalny – Zgony\"], color=\"grey\", label = \"Ruch naturalny – Zgony\")\n",
+    "axs[0].plot(\n",
+    "    df[\"Rok\"],\n",
+    "    df[\"Ruch naturalny – Urodzenia\"],\n",
+    "    color=\"blue\",\n",
+    "    label=\"Ruch naturalny – Urodzenia\")\n",
+    "\n",
+    "axs[0].plot(\n",
+    "    df[\"Rok\"],\n",
+    "    df[\"Ruch naturalny – Zgony\"],\n",
+    "    color=\"grey\",\n",
+    "    label = \"Ruch naturalny – Zgony\")\n",
     "\n",
     "# drugi wykres:\n",
-    "axs[1].plot(df[\"Rok\"], df[\"Migracje zagraniczne na pobyt stały – Imigracja\"], color=\"grey\", label=\"Migracje zagraniczne na pobyt stały – Imigracja\")\n",
-    "axs[1].plot(df[\"Rok\"], df[\"Migracje zagraniczne na pobyt stały – Emigracja\"], color=\"blue\", label=\"Migracje zagraniczne na pobyt stały – Emigracja\")\n",
+    "axs[1].plot(\n",
+    "    df[\"Rok\"],\n",
+    "    df[\"Migracje zagraniczne na pobyt stały – Imigracja\"],\n",
+    "    color=\"grey\",\n",
+    "    label=\"Migracje zagraniczne na pobyt stały – Imigracja\")\n",
+    "\n",
+    "axs[1].plot(\n",
+    "    df[\"Rok\"],\n",
+    "    df[\"Migracje zagraniczne na pobyt stały – Emigracja\"],\n",
+    "    color=\"blue\",\n",
+    "    label=\"Migracje zagraniczne na pobyt stały – Emigracja\")\n",
+    "\n",
     "\n",
     "axs[0].legend()\n",
     "axs[1].legend()\n",
