Ruch naturalny i wędrówkowy

--- a/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
+++ b/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
@@ -467,8 +467,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T20:33:50.956445Z",
-     "start_time": "2024-11-19T20:33:50.697928Z"
+     "end_time": "2024-11-19T20:40:42.172917Z",
+     "start_time": "2024-11-19T20:40:41.901351Z"
     }
    },
    "cell_type": "code",
@@ -503,9 +503,13 @@
     "    color=\"blue\",\n",
     "    label=\"Migracje zagraniczne na pobyt stały – Emigracja\")\n",
     "\n",
+    "# legenda domyślnie ustawi się sama w jakimś miejscu:\n",
+    "# axs[0].legend()\n",
+    "# axs[1].legend()\n",
     "\n",
-    "axs[0].legend()\n",
-    "axs[1].legend()\n",
+    "# jeżeli legenda się umieści w złym miejscu, to możemy przesunąć legendę:\n",
+    "axs[0].legend(loc=\"upper left\")\n",
+    "axs[1].legend(loc=\"upper left\")\n",
     "\n",
     "plt.xticks(rotation=45)\n",
     "\n",
@@ -524,7 +528,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 15
+   "execution_count": 17
   },
   {
    "metadata": {},
