Ruch naturalny i wędrówkowy

--- a/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
+++ b/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
@@ -17,8 +17,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:13:18.787858Z",
-     "start_time": "2024-11-19T22:13:18.782492Z"
+     "end_time": "2024-11-19T22:31:50.674993Z",
+     "start_time": "2024-11-19T22:31:49.682335Z"
     }
    },
    "source": [
@@ -28,25 +28,25 @@
     "from matplotlib import ticker"
    ],
    "outputs": [],
-   "execution_count": 48
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:13:19.608354Z",
-     "start_time": "2024-11-19T22:13:19.567696Z"
+     "end_time": "2024-11-19T22:31:51.882388Z",
+     "start_time": "2024-11-19T22:31:51.597457Z"
     }
    },
    "cell_type": "code",
    "source": "df = pd.read_excel(os.path.join(\"..\", \"01_Dane do wykresów\", \"Ludność w Polsce - prognozy.xlsx\"), sheet_name=\"ruch naturalny i wędrówkowy\")",
    "outputs": [],
-   "execution_count": 49
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:13:20.346596Z",
-     "start_time": "2024-11-19T22:13:20.338545Z"
+     "end_time": "2024-11-19T22:31:52.560165Z",
+     "start_time": "2024-11-19T22:31:52.549280Z"
     }
    },
    "cell_type": "code",
@@ -167,18 +167,18 @@
        "</div>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 50
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:13:20.874823Z",
-     "start_time": "2024-11-19T22:13:20.863763Z"
+     "end_time": "2024-11-19T22:31:53.277508Z",
+     "start_time": "2024-11-19T22:31:53.265728Z"
     }
    },
    "cell_type": "code",
@@ -188,52 +188,52 @@
      "data": {
       "text/plain": [
        "     Rok  Ludność na 31 XII  Ruch naturalny – Urodzenia  \\\n",
-       "18  2032           37043097                      289578   \n",
-       "10  2024           37739127                      332289   \n",
-       "36  2050           34856003                      277584   \n",
-       "23  2037           36448472                      284842   \n",
-       "32  2046           35332468                      285284   \n",
-       "26  2040           36073444                      286543   \n",
-       "29  2043           35699764                      287471   \n",
-       "2   2016           38001253                      375756   \n",
-       "19  2033           36930201                      287268   \n",
        "15  2029           37351763                      301214   \n",
+       "11  2025           37675399                      325256   \n",
+       "34  2048           35091988                      281957   \n",
+       "14  2028           37442704                      306458   \n",
+       "26  2040           36073444                      286543   \n",
+       "28  2042           35823725                      287425   \n",
+       "25  2039           36198730                      285911   \n",
+       "27  2041           35948348                      287086   \n",
+       "31  2045           35454073                      286418   \n",
+       "4   2018           37973268                      370033   \n",
        "\n",
        "    Ruch naturalny – Zgony  Migracje zagraniczne na pobyt stały – Imigracja  \\\n",
-       "18                  420199                                            67272   \n",
-       "10                  399729                                            59900   \n",
-       "36                  431968                                            76300   \n",
-       "23                  435729                                            70498   \n",
-       "32                  441219                                            74727   \n",
-       "26                  441747                                            72088   \n",
-       "29                  443650                                            73474   \n",
-       "2                   379681                                            56045   \n",
-       "19                  423550                                            67982   \n",
        "15                  410555                                            64837   \n",
+       "11                  401424                                            60991   \n",
+       "34                  437371                                            75523   \n",
+       "14                  407801                                            63951   \n",
+       "26                  441747                                            72088   \n",
+       "28                  443514                                            73020   \n",
+       "25                  440158                                            71578   \n",
+       "27                  442879                                            72559   \n",
+       "31                  442496                                            74315   \n",
+       "4                   386849                                            52063   \n",
        "\n",
        "    Migracje zagraniczne na pobyt stały – Emigracja  \\\n",
-       "18                                            45020   \n",
-       "10                                            49074   \n",
-       "36                                            39297   \n",
-       "23                                            43141   \n",
-       "32                                            40397   \n",
-       "26                                            42170   \n",
-       "29                                            41256   \n",
-       "2                                             52396   \n",
-       "19                                            44596   \n",
        "15                                            46437   \n",
+       "11                                            48551   \n",
+       "34                                            39850   \n",
+       "14                                            46965   \n",
+       "26                                            42170   \n",
+       "28                                            41554   \n",
+       "25                                            42490   \n",
+       "27                                            41862   \n",
+       "31                                            40685   \n",
+       "4                                             51760   \n",
        "\n",
        "    Migracje zagraniczne na pobyt stały – Saldo  \n",
-       "18                                        22252  \n",
-       "10                                        10826  \n",
-       "36                                        37003  \n",
-       "23                                        27357  \n",
-       "32                                        34330  \n",
+       "15                                        18400  \n",
+       "11                                        12440  \n",
+       "34                                        35673  \n",
+       "14                                        16986  \n",
        "26                                        29918  \n",
-       "29                                        32218  \n",
-       "2                                          3649  \n",
-       "19                                        23386  \n",
-       "15                                        18400  "
+       "28                                        31466  \n",
+       "25                                        29088  \n",
+       "27                                        30697  \n",
+       "31                                        33630  \n",
+       "4                                           303  "
       ],
       "text/html": [
        "<div>\n",
@@ -265,54 +265,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2032</td>\n",
-       "      <td>37043097</td>\n",
-       "      <td>289578</td>\n",
-       "      <td>420199</td>\n",
-       "      <td>67272</td>\n",
-       "      <td>45020</td>\n",
-       "      <td>22252</td>\n",
+       "      <th>15</th>\n",
+       "      <td>2029</td>\n",
+       "      <td>37351763</td>\n",
+       "      <td>301214</td>\n",
+       "      <td>410555</td>\n",
+       "      <td>64837</td>\n",
+       "      <td>46437</td>\n",
+       "      <td>18400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2024</td>\n",
-       "      <td>37739127</td>\n",
-       "      <td>332289</td>\n",
-       "      <td>399729</td>\n",
-       "      <td>59900</td>\n",
-       "      <td>49074</td>\n",
-       "      <td>10826</td>\n",
+       "      <th>11</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>37675399</td>\n",
+       "      <td>325256</td>\n",
+       "      <td>401424</td>\n",
+       "      <td>60991</td>\n",
+       "      <td>48551</td>\n",
+       "      <td>12440</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>2050</td>\n",
-       "      <td>34856003</td>\n",
-       "      <td>277584</td>\n",
-       "      <td>431968</td>\n",
-       "      <td>76300</td>\n",
-       "      <td>39297</td>\n",
-       "      <td>37003</td>\n",
+       "      <th>34</th>\n",
+       "      <td>2048</td>\n",
+       "      <td>35091988</td>\n",
+       "      <td>281957</td>\n",
+       "      <td>437371</td>\n",
+       "      <td>75523</td>\n",
+       "      <td>39850</td>\n",
+       "      <td>35673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2037</td>\n",
-       "      <td>36448472</td>\n",
-       "      <td>284842</td>\n",
-       "      <td>435729</td>\n",
-       "      <td>70498</td>\n",
-       "      <td>43141</td>\n",
-       "      <td>27357</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>2046</td>\n",
-       "      <td>35332468</td>\n",
-       "      <td>285284</td>\n",
-       "      <td>441219</td>\n",
-       "      <td>74727</td>\n",
-       "      <td>40397</td>\n",
-       "      <td>34330</td>\n",
+       "      <th>14</th>\n",
+       "      <td>2028</td>\n",
+       "      <td>37442704</td>\n",
+       "      <td>306458</td>\n",
+       "      <td>407801</td>\n",
+       "      <td>63951</td>\n",
+       "      <td>46965</td>\n",
+       "      <td>16986</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -325,62 +315,72 @@
        "      <td>29918</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>2043</td>\n",
-       "      <td>35699764</td>\n",
-       "      <td>287471</td>\n",
-       "      <td>443650</td>\n",
-       "      <td>73474</td>\n",
-       "      <td>41256</td>\n",
-       "      <td>32218</td>\n",
+       "      <th>28</th>\n",
+       "      <td>2042</td>\n",
+       "      <td>35823725</td>\n",
+       "      <td>287425</td>\n",
+       "      <td>443514</td>\n",
+       "      <td>73020</td>\n",
+       "      <td>41554</td>\n",
+       "      <td>31466</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>38001253</td>\n",
-       "      <td>375756</td>\n",
-       "      <td>379681</td>\n",
-       "      <td>56045</td>\n",
-       "      <td>52396</td>\n",
-       "      <td>3649</td>\n",
+       "      <th>25</th>\n",
+       "      <td>2039</td>\n",
+       "      <td>36198730</td>\n",
+       "      <td>285911</td>\n",
+       "      <td>440158</td>\n",
+       "      <td>71578</td>\n",
+       "      <td>42490</td>\n",
+       "      <td>29088</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2033</td>\n",
-       "      <td>36930201</td>\n",
-       "      <td>287268</td>\n",
-       "      <td>423550</td>\n",
-       "      <td>67982</td>\n",
-       "      <td>44596</td>\n",
-       "      <td>23386</td>\n",
+       "      <th>27</th>\n",
+       "      <td>2041</td>\n",
+       "      <td>35948348</td>\n",
+       "      <td>287086</td>\n",
+       "      <td>442879</td>\n",
+       "      <td>72559</td>\n",
+       "      <td>41862</td>\n",
+       "      <td>30697</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2029</td>\n",
-       "      <td>37351763</td>\n",
-       "      <td>301214</td>\n",
-       "      <td>410555</td>\n",
-       "      <td>64837</td>\n",
-       "      <td>46437</td>\n",
-       "      <td>18400</td>\n",
+       "      <th>31</th>\n",
+       "      <td>2045</td>\n",
+       "      <td>35454073</td>\n",
+       "      <td>286418</td>\n",
+       "      <td>442496</td>\n",
+       "      <td>74315</td>\n",
+       "      <td>40685</td>\n",
+       "      <td>33630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>37973268</td>\n",
+       "      <td>370033</td>\n",
+       "      <td>386849</td>\n",
+       "      <td>52063</td>\n",
+       "      <td>51760</td>\n",
+       "      <td>303</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 51
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:13:21.515567Z",
-     "start_time": "2024-11-19T22:13:21.506979Z"
+     "end_time": "2024-11-19T22:31:54.456258Z",
+     "start_time": "2024-11-19T22:31:54.436580Z"
     }
    },
    "cell_type": "code",
@@ -407,13 +407,13 @@
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:13:22.219579Z",
-     "start_time": "2024-11-19T22:13:22.214310Z"
+     "end_time": "2024-11-19T22:31:55.510346Z",
+     "start_time": "2024-11-19T22:31:55.502023Z"
     }
    },
    "cell_type": "code",
@@ -425,18 +425,18 @@
        "(37, 7)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 53
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:13:22.993989Z",
-     "start_time": "2024-11-19T22:13:22.983750Z"
+     "end_time": "2024-11-19T22:31:56.389595Z",
+     "start_time": "2024-11-19T22:31:56.383337Z"
     }
    },
    "cell_type": "code",
@@ -456,18 +456,18 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 54
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:18:04.628436Z",
-     "start_time": "2024-11-19T22:18:04.344982Z"
+     "end_time": "2024-11-19T22:32:49.012201Z",
+     "start_time": "2024-11-19T22:32:48.458861Z"
     }
    },
    "cell_type": "code",
@@ -494,6 +494,10 @@
     "\n",
     "# jak chcemy zrobić wypełnienie kolorem pomiędzy dwiema liniami na wykresie, to:\n",
     "axs[0].fill_between(df[\"Rok\"], df[\"Ruch naturalny – Urodzenia\"], df[\"Ruch naturalny – Zgony\"], alpha=0.3)\n",
+    "\n",
+    "#dodawanie tekstu w środku tego zakolorowanego pola:\n",
+    "# xy pozycja tekstu i to jest tupla\n",
+    "axs[0].annotate(\"Spadek populacji\", xy=(2030, 360))\n",
     "\n",
     "\n",
     "# drugi wykres:\n",
@@ -531,7 +535,7 @@
     "# fig.set_title(\"zmiany\")\n",
     "\n",
     "# obcinam zera na osi y:\n",
-    "axs[0].yaxis.set_major_formatter(ticker.FuncFormatter(lambda x, pos: f'{int(x / 1e3)}'))\n",
+    "#axs[0].yaxis.set_major_formatter(ticker.FuncFormatter(lambda x, pos: f'{int(x / 1e3)}'))\n",
     "axs[1].yaxis.set_major_formatter(ticker.FuncFormatter(lambda x, pos: f'{int(x / 1e3)}'))\n",
     "\n",
     "# fig bo tytuł jeden do wszystkich wykresów (jak chcę do każdego wykresu inny tytuł, to plt.title)\n",
@@ -555,7 +559,14 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 57
+   "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
