--- a/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
+++ b/05_Wykresy/Materiały_na_zjazd/02_Wykresy/04_Wiele wykresów na jednym obrazku/1_Ruch naturalny i wędrówkowy.ipynb
@@ -17,8 +17,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:31:50.674993Z",
-     "start_time": "2024-11-19T22:31:49.682335Z"
+     "end_time": "2024-11-19T22:45:41.011028Z",
+     "start_time": "2024-11-19T22:45:41.005438Z"
     }
    },
    "source": [
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:31:51.882388Z",
-     "start_time": "2024-11-19T22:31:51.597457Z"
+     "end_time": "2024-11-19T22:45:42.548726Z",
+     "start_time": "2024-11-19T22:45:42.321309Z"
     }
    },
    "cell_type": "code",
@@ -45,8 +45,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:31:52.560165Z",
-     "start_time": "2024-11-19T22:31:52.549280Z"
+     "end_time": "2024-11-19T22:45:43.487503Z",
+     "start_time": "2024-11-19T22:45:43.473847Z"
     }
    },
    "cell_type": "code",
@@ -177,8 +177,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:31:53.277508Z",
-     "start_time": "2024-11-19T22:31:53.265728Z"
+     "end_time": "2024-11-19T22:45:44.700660Z",
+     "start_time": "2024-11-19T22:45:44.692404Z"
     }
    },
    "cell_type": "code",
@@ -188,52 +188,52 @@
      "data": {
       "text/plain": [
        "     Rok  Ludność na 31 XII  Ruch naturalny – Urodzenia  \\\n",
-       "15  2029           37351763                      301214   \n",
+       "19  2033           36930201                      287268   \n",
+       "20  2034           36813558                      285745   \n",
+       "23  2037           36448472                      284842   \n",
+       "21  2035           36693921                      284920   \n",
+       "2   2016           38001253                      375756   \n",
        "11  2025           37675399                      325256   \n",
-       "34  2048           35091988                      281957   \n",
-       "14  2028           37442704                      306458   \n",
+       "29  2043           35699764                      287471   \n",
+       "8   2022           37845141                      346635   \n",
        "26  2040           36073444                      286543   \n",
-       "28  2042           35823725                      287425   \n",
-       "25  2039           36198730                      285911   \n",
-       "27  2041           35948348                      287086   \n",
-       "31  2045           35454073                      286418   \n",
-       "4   2018           37973268                      370033   \n",
+       "24  2038           36323889                      285306   \n",
        "\n",
        "    Ruch naturalny – Zgony  Migracje zagraniczne na pobyt stały – Imigracja  \\\n",
-       "15                  410555                                            64837   \n",
+       "19                  423550                                            67982   \n",
+       "20                  426847                                            68663   \n",
+       "23                  435729                                            70498   \n",
+       "21                  430024                                            69305   \n",
+       "2                   379681                                            56045   \n",
        "11                  401424                                            60991   \n",
-       "34                  437371                                            75523   \n",
-       "14                  407801                                            63951   \n",
+       "29                  443650                                            73474   \n",
+       "8                   396329                                            57541   \n",
        "26                  441747                                            72088   \n",
-       "28                  443514                                            73020   \n",
-       "25                  440158                                            71578   \n",
-       "27                  442879                                            72559   \n",
-       "31                  442496                                            74315   \n",
-       "4                   386849                                            52063   \n",
+       "24                  438135                                            71051   \n",
        "\n",
        "    Migracje zagraniczne na pobyt stały – Emigracja  \\\n",
-       "15                                            46437   \n",
+       "19                                            44596   \n",
+       "20                                            44204   \n",
+       "23                                            43141   \n",
+       "21                                            43838   \n",
+       "2                                             52396   \n",
        "11                                            48551   \n",
-       "34                                            39850   \n",
-       "14                                            46965   \n",
+       "29                                            41256   \n",
+       "8                                             50065   \n",
        "26                                            42170   \n",
-       "28                                            41554   \n",
-       "25                                            42490   \n",
-       "27                                            41862   \n",
-       "31                                            40685   \n",
-       "4                                             51760   \n",
+       "24                                            42805   \n",
        "\n",
        "    Migracje zagraniczne na pobyt stały – Saldo  \n",
-       "15                                        18400  \n",
+       "19                                        23386  \n",
+       "20                                        24459  \n",
+       "23                                        27357  \n",
+       "21                                        25467  \n",
+       "2                                          3649  \n",
        "11                                        12440  \n",
-       "34                                        35673  \n",
-       "14                                        16986  \n",
+       "29                                        32218  \n",
+       "8                                          7476  \n",
        "26                                        29918  \n",
-       "28                                        31466  \n",
-       "25                                        29088  \n",
-       "27                                        30697  \n",
-       "31                                        33630  \n",
-       "4                                           303  "
+       "24                                        28246  "
       ],
       "text/html": [
        "<div>\n",
@@ -265,14 +265,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2029</td>\n",
-       "      <td>37351763</td>\n",
-       "      <td>301214</td>\n",
-       "      <td>410555</td>\n",
-       "      <td>64837</td>\n",
-       "      <td>46437</td>\n",
-       "      <td>18400</td>\n",
+       "      <th>19</th>\n",
+       "      <td>2033</td>\n",
+       "      <td>36930201</td>\n",
+       "      <td>287268</td>\n",
+       "      <td>423550</td>\n",
+       "      <td>67982</td>\n",
+       "      <td>44596</td>\n",
+       "      <td>23386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2034</td>\n",
+       "      <td>36813558</td>\n",
+       "      <td>285745</td>\n",
+       "      <td>426847</td>\n",
+       "      <td>68663</td>\n",
+       "      <td>44204</td>\n",
+       "      <td>24459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2037</td>\n",
+       "      <td>36448472</td>\n",
+       "      <td>284842</td>\n",
+       "      <td>435729</td>\n",
+       "      <td>70498</td>\n",
+       "      <td>43141</td>\n",
+       "      <td>27357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>36693921</td>\n",
+       "      <td>284920</td>\n",
+       "      <td>430024</td>\n",
+       "      <td>69305</td>\n",
+       "      <td>43838</td>\n",
+       "      <td>25467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>38001253</td>\n",
+       "      <td>375756</td>\n",
+       "      <td>379681</td>\n",
+       "      <td>56045</td>\n",
+       "      <td>52396</td>\n",
+       "      <td>3649</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -285,24 +325,24 @@
        "      <td>12440</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>2048</td>\n",
-       "      <td>35091988</td>\n",
-       "      <td>281957</td>\n",
-       "      <td>437371</td>\n",
-       "      <td>75523</td>\n",
-       "      <td>39850</td>\n",
-       "      <td>35673</td>\n",
+       "      <th>29</th>\n",
+       "      <td>2043</td>\n",
+       "      <td>35699764</td>\n",
+       "      <td>287471</td>\n",
+       "      <td>443650</td>\n",
+       "      <td>73474</td>\n",
+       "      <td>41256</td>\n",
+       "      <td>32218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2028</td>\n",
-       "      <td>37442704</td>\n",
-       "      <td>306458</td>\n",
-       "      <td>407801</td>\n",
-       "      <td>63951</td>\n",
-       "      <td>46965</td>\n",
-       "      <td>16986</td>\n",
+       "      <th>8</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>37845141</td>\n",
+       "      <td>346635</td>\n",
+       "      <td>396329</td>\n",
+       "      <td>57541</td>\n",
+       "      <td>50065</td>\n",
+       "      <td>7476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -315,54 +355,14 @@
        "      <td>29918</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>2042</td>\n",
-       "      <td>35823725</td>\n",
-       "      <td>287425</td>\n",
-       "      <td>443514</td>\n",
-       "      <td>73020</td>\n",
-       "      <td>41554</td>\n",
-       "      <td>31466</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>2039</td>\n",
-       "      <td>36198730</td>\n",
-       "      <td>285911</td>\n",
-       "      <td>440158</td>\n",
-       "      <td>71578</td>\n",
-       "      <td>42490</td>\n",
-       "      <td>29088</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>2041</td>\n",
-       "      <td>35948348</td>\n",
-       "      <td>287086</td>\n",
-       "      <td>442879</td>\n",
-       "      <td>72559</td>\n",
-       "      <td>41862</td>\n",
-       "      <td>30697</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>2045</td>\n",
-       "      <td>35454073</td>\n",
-       "      <td>286418</td>\n",
-       "      <td>442496</td>\n",
-       "      <td>74315</td>\n",
-       "      <td>40685</td>\n",
-       "      <td>33630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>37973268</td>\n",
-       "      <td>370033</td>\n",
-       "      <td>386849</td>\n",
-       "      <td>52063</td>\n",
-       "      <td>51760</td>\n",
-       "      <td>303</td>\n",
+       "      <th>24</th>\n",
+       "      <td>2038</td>\n",
+       "      <td>36323889</td>\n",
+       "      <td>285306</td>\n",
+       "      <td>438135</td>\n",
+       "      <td>71051</td>\n",
+       "      <td>42805</td>\n",
+       "      <td>28246</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -379,8 +379,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:31:54.456258Z",
-     "start_time": "2024-11-19T22:31:54.436580Z"
+     "end_time": "2024-11-19T22:45:45.860845Z",
+     "start_time": "2024-11-19T22:45:45.848970Z"
     }
    },
    "cell_type": "code",
@@ -412,8 +412,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:31:55.510346Z",
-     "start_time": "2024-11-19T22:31:55.502023Z"
+     "end_time": "2024-11-19T22:45:46.645354Z",
+     "start_time": "2024-11-19T22:45:46.640215Z"
     }
    },
    "cell_type": "code",
@@ -435,8 +435,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:31:56.389595Z",
-     "start_time": "2024-11-19T22:31:56.383337Z"
+     "end_time": "2024-11-19T22:45:47.360091Z",
+     "start_time": "2024-11-19T22:45:47.354503Z"
     }
    },
    "cell_type": "code",
@@ -466,8 +466,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T22:32:49.012201Z",
-     "start_time": "2024-11-19T22:32:48.458861Z"
+     "end_time": "2024-11-19T22:48:43.922899Z",
+     "start_time": "2024-11-19T22:48:43.182786Z"
     }
    },
    "cell_type": "code",
@@ -497,7 +497,9 @@
     "\n",
     "#dodawanie tekstu w środku tego zakolorowanego pola:\n",
     "# xy pozycja tekstu i to jest tupla\n",
-    "axs[0].annotate(\"Spadek populacji\", xy=(2030, 360))\n",
+    "# arrowprops daje strzałkę\n",
+    "#lw to grubość strzałki\n",
+    "axs[0].annotate(\"Spadek populacji\", xy=(2030, 360), fontsize=\"14\", arrowprops=dict(arrowstyle=\"->\", color=\"red\", lw=\"2\"))\n",
     "\n",
     "\n",
     "# drugi wykres:\n",
@@ -515,7 +517,7 @@
     "\n",
     "# jak chcemy zrobić wypełnienie kolorem pomiędzy dwiema liniami na wykresie, to:\n",
     "axs[1].fill_between(df[\"Rok\"], df[\"Migracje zagraniczne na pobyt stały – Imigracja\"], df[\"Migracje zagraniczne na pobyt stały – Emigracja\"], alpha=0.3)\n",
-    "\n",
+    "axs[1].annotate(\"Spadek populacji\", xy=(2040, 50), fontsize=\"14\", arrowprops=dict(arrowstyle=\"->\", color=\"red\", lw=\"3\"))\n",
     "\n",
     "# legenda domyślnie ustawi się sama w jakimś miejscu:\n",
     "# axs[0].legend()\n",
@@ -559,7 +561,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 10
+   "execution_count": 11
   },
   {
    "metadata": {},
