--- a/05_Wykresy/Materiały_na_zjazd/02_Wykresy/05_Dodatkowe elementy na wykresie/1_Wrocławskie rowery miejskie.ipynb
+++ b/05_Wykresy/Materiały_na_zjazd/02_Wykresy/05_Dodatkowe elementy na wykresie/1_Wrocławskie rowery miejskie.ipynb
@@ -413,8 +413,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-20T20:02:36.835688Z",
-     "start_time": "2024-11-20T20:02:36.824026Z"
+     "end_time": "2024-11-20T20:07:09.740243Z",
+     "start_time": "2024-11-20T20:07:09.719985Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df[\"Data zwrotu\"] = pd.to_datetime(df[\"Data zwrotu\"])",
+   "outputs": [],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-20T20:07:11.066957Z",
+     "start_time": "2024-11-20T20:07:11.055150Z"
     }
    },
    "cell_type": "code",
@@ -432,39 +444,203 @@
       " 0   UID wynajmu     3067 non-null   int64         \n",
       " 1   Numer roweru    3067 non-null   int64         \n",
       " 2   Data wynajmu    3067 non-null   datetime64[ns]\n",
-      " 3   Data zwrotu     3067 non-null   object        \n",
+      " 3   Data zwrotu     3067 non-null   datetime64[ns]\n",
       " 4   Stacja wynajmu  3067 non-null   object        \n",
       " 5   Stacja zwrotu   3067 non-null   object        \n",
       " 6   Czas trwania    3067 non-null   int64         \n",
-      "dtypes: datetime64[ns](1), int64(3), object(3)\n",
+      "dtypes: datetime64[ns](2), int64(3), object(2)\n",
       "memory usage: 167.9+ KB\n"
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-20T19:46:56.790133Z",
-     "start_time": "2024-11-20T19:46:56.783848Z"
+     "end_time": "2024-11-20T20:07:48.469273Z",
+     "start_time": "2024-11-20T20:07:48.448681Z"
     }
    },
    "cell_type": "code",
-   "source": "df.shape",
+   "source": "df.head",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3067, 7)"
+       "<bound method NDFrame.head of       UID wynajmu  Numer roweru        Data wynajmu         Data zwrotu  \\\n",
+       "0       112512738         57243 2021-03-03 23:41:47 2021-03-04 00:00:34   \n",
+       "1       112512783         57434 2021-03-03 23:46:14 2021-03-04 00:00:41   \n",
+       "2       112512778        650040 2021-03-03 23:45:30 2021-03-04 00:02:33   \n",
+       "3       112512869         57441 2021-03-03 23:53:59 2021-03-04 00:05:08   \n",
+       "4       112512830        651044 2021-03-03 23:50:10 2021-03-04 00:07:12   \n",
+       "...           ...           ...                 ...                 ...   \n",
+       "3062    112548936         57511 2021-03-04 23:47:37 2021-03-04 23:52:25   \n",
+       "3063    112548810         57137 2021-03-04 23:33:15 2021-03-04 23:52:42   \n",
+       "3064    112548934        651243 2021-03-04 23:47:25 2021-03-04 23:56:43   \n",
+       "3065    112548972        650956 2021-03-04 23:51:43 2021-03-04 23:58:58   \n",
+       "3066    112548907         57625 2021-03-04 23:44:16 2021-03-04 23:59:50   \n",
+       "\n",
+       "                                Stacja wynajmu  \\\n",
+       "0                    Plac Grunwaldzki / Polaka   \n",
+       "1                    Bezpieczna/Jugosławiańska   \n",
+       "2               al. Kochanowskiego / Kopernika   \n",
+       "3           Plac Świętego Macieja / Trzebnicka   \n",
+       "4                     Powstańców Śląskich/Orla   \n",
+       "...                                        ...   \n",
+       "3062                     Legnicka / Zachodnia    \n",
+       "3063            Grota-Roweckiego/Iwaszkiewicza   \n",
+       "3064  Plac Dominikański (Galeria Dominikańska)   \n",
+       "3065       Powstańcow Śląskich / Aleja Hallera   \n",
+       "3066                              .RELOKACYJNA   \n",
+       "\n",
+       "                        Stacja zwrotu  Czas trwania  \n",
+       "0                         Poza stacją            19  \n",
+       "1                    Kurkowa / Dubois            15  \n",
+       "2                       Rondo Reagana            18  \n",
+       "3           Nowowiejska / Górnickiego            12  \n",
+       "4     Szewska / Kazimierza Wielkiego             18  \n",
+       "...                               ...           ...  \n",
+       "3062                      Poza stacją             5  \n",
+       "3063    Wałbrzyska - pętla tramwajowa            20  \n",
+       "3064       Nowowiejska / Wyszyńskiego            10  \n",
+       "3065            Zaporoska / Gajowicka             8  \n",
+       "3066             Janiszewskiego (PWr)            16  \n",
+       "\n",
+       "[3067 rows x 7 columns]>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-20T20:08:00.048510Z",
+     "start_time": "2024-11-20T20:08:00.034983Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.head()",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   UID wynajmu  Numer roweru        Data wynajmu         Data zwrotu  \\\n",
+       "0    112512738         57243 2021-03-03 23:41:47 2021-03-04 00:00:34   \n",
+       "1    112512783         57434 2021-03-03 23:46:14 2021-03-04 00:00:41   \n",
+       "2    112512778        650040 2021-03-03 23:45:30 2021-03-04 00:02:33   \n",
+       "3    112512869         57441 2021-03-03 23:53:59 2021-03-04 00:05:08   \n",
+       "4    112512830        651044 2021-03-03 23:50:10 2021-03-04 00:07:12   \n",
+       "\n",
+       "                       Stacja wynajmu                    Stacja zwrotu  \\\n",
+       "0           Plac Grunwaldzki / Polaka                      Poza stacją   \n",
+       "1           Bezpieczna/Jugosławiańska                 Kurkowa / Dubois   \n",
+       "2      al. Kochanowskiego / Kopernika                    Rondo Reagana   \n",
+       "3  Plac Świętego Macieja / Trzebnicka        Nowowiejska / Górnickiego   \n",
+       "4            Powstańców Śląskich/Orla  Szewska / Kazimierza Wielkiego    \n",
+       "\n",
+       "   Czas trwania  \n",
+       "0            19  \n",
+       "1            15  \n",
+       "2            18  \n",
+       "3            12  \n",
+       "4            18  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UID wynajmu</th>\n",
+       "      <th>Numer roweru</th>\n",
+       "      <th>Data wynajmu</th>\n",
+       "      <th>Data zwrotu</th>\n",
+       "      <th>Stacja wynajmu</th>\n",
+       "      <th>Stacja zwrotu</th>\n",
+       "      <th>Czas trwania</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>112512738</td>\n",
+       "      <td>57243</td>\n",
+       "      <td>2021-03-03 23:41:47</td>\n",
+       "      <td>2021-03-04 00:00:34</td>\n",
+       "      <td>Plac Grunwaldzki / Polaka</td>\n",
+       "      <td>Poza stacją</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>112512783</td>\n",
+       "      <td>57434</td>\n",
+       "      <td>2021-03-03 23:46:14</td>\n",
+       "      <td>2021-03-04 00:00:41</td>\n",
+       "      <td>Bezpieczna/Jugosławiańska</td>\n",
+       "      <td>Kurkowa / Dubois</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>112512778</td>\n",
+       "      <td>650040</td>\n",
+       "      <td>2021-03-03 23:45:30</td>\n",
+       "      <td>2021-03-04 00:02:33</td>\n",
+       "      <td>al. Kochanowskiego / Kopernika</td>\n",
+       "      <td>Rondo Reagana</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>112512869</td>\n",
+       "      <td>57441</td>\n",
+       "      <td>2021-03-03 23:53:59</td>\n",
+       "      <td>2021-03-04 00:05:08</td>\n",
+       "      <td>Plac Świętego Macieja / Trzebnicka</td>\n",
+       "      <td>Nowowiejska / Górnickiego</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>112512830</td>\n",
+       "      <td>651044</td>\n",
+       "      <td>2021-03-03 23:50:10</td>\n",
+       "      <td>2021-03-04 00:07:12</td>\n",
+       "      <td>Powstańców Śląskich/Orla</td>\n",
+       "      <td>Szewska / Kazimierza Wielkiego</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
   },
   {
    "metadata": {
